<resources>
    <string name="app_name">Toko AppMob</string>

    <string name="nama_label">Nama:</string>
    <string name="tipe_pelanggan_label">Tipe Pelanggan:</string>
    <string name="gold">Gold</string>
    <string name="silver">Silver</string>
    <string name="biasa">Biasa</string>
    <string name="kode_barang_label">Kode Barang:</string>
    <string name="jumlah_label">Jumlah:</string>
    <string name="proses_button">Proses</string>
    <string name="nama_hint">Masukkan Nama</string>
    <string name="kode_barang_hint">Kode Barang</string>
    <string name="jumlah_barang_hint">Jumlah Barang</string>
    <string name="ubahbahasa">Ubah bahasa</string>
    <string name="Selamat_Datang">Selamat Datang ahmad renaldi</string>
    <string name="Tipe_Member">Tipe Member: biasa</string>
    <string name="Transaksi_hari_ini">Transaksi hari ini</string>
    <string name="Kode_Barang">Kode Barang: 017</string>
    <string name="Nama_Barang">Nama Barang: Oppo A17</string>
    <string name="Harga">Harga: Rp. 2.500.999</string>
    <string name="Total_Harga">Total Harga: Rp. 7.502.997</string>
    <string name="Discount_Harga">Discount Harga: Rp. 100.000</string>
    <string name="Discount_Member">Discount Member (2%): Rp. 150.059</string>
    <string name="Jumlah_Bayar">Jumlah Bayar: Rp. 7.352.937</string>
    <string name="Terimakasih_telah_berbelanja_disin">Terimakasih telah berbelanja disini</string>
    <string name="Bagikan">Bagikan</string>

</resources>





